Add metrics display on organization page
